[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/Rooms/StartScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sound_2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/StoryTimer.gd" type="Script" id=3]
[ext_resource path="res://Scripts/SceneContainer.gd" type="Script" id=4]
[ext_resource path="res://Scripts/StoryManager.gd" type="Script" id=5]
[ext_resource path="res://Assets/house_ambience.ogg" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Volume.gd" type="Script" id=8]
[ext_resource path="res://Scripts/AmbientLighting.gd" type="Script" id=9]
[ext_resource path="res://Scripts/PermanenceManager.gd" type="Script" id=10]
[ext_resource path="res://Scripts/ExitManager.gd" type="Script" id=11]
[ext_resource path="res://Scripts/FlairManager.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Rooms/EffectPlayer.gd" type="Script" id=13]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AmbientLighting:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0235294, 0.0235294, 0.0235294, 1 ), Color( 0.121569, 0.109804, 0.121569, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AmbientLighting:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeInToMenu"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AmbientLighting:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.121569, 0.109804, 0.121569, 1 ), Color( 0.0235294, 0.0235294, 0.0235294, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AmbientLighting:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "anger"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AmbientLighting:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0235294, 0.0235294, 0.0235294, 1 ), Color( 0.0705882, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EffectPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "anger", "AmbientLighting:color", "AmbientLighting" ],
"method": "matchKeyframeColor"
} ]
}

[sub_resource type="Animation" id=4]
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("AmbientLighting:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.121569, 0.109804, 0.121569, 1 ), Color( 0.0235294, 0.0235294, 0.0235294, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EffectPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "darken", "AmbientLighting:color", "AmbientLighting" ],
"method": "matchKeyframeColor"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "depression"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AmbientLighting:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0235294, 0.0235294, 0.0235294, 1 ), Color( 0, 0.0588235, 0.101961, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EffectPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "depression", "AmbientLighting:color", "AmbientLighting" ],
"method": "matchKeyframeColor"
} ]
}

[sub_resource type="Animation" id=5]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("AmbientLighting:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1.2, 1.6, 2, 2.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 3.605 ),
"update": 0,
"values": [ Color( 0.243137, 0.0235294, 0.258824, 1 ), Color( 0.0235294, 0.0235294, 0.0235294, 1 ), Color( 0.243137, 0.0235294, 0.258824, 1 ), Color( 0.0235294, 0.0235294, 0.0235294, 1 ), Color( 0.243137, 0.0235294, 0.258824, 1 ), Color( 0.0235294, 0.0235294, 0.0235294, 1 ), Color( 0.243137, 0.0235294, 0.258824, 1 ), Color( 0.0235294, 0.0235294, 0.0235294, 1 ), Color( 0.243137, 0.0235294, 0.258824, 1 ), Color( 0.0235294, 0.0235294, 0.0235294, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "neutral"
tracks/0/type = "method"
tracks/0/path = NodePath("EffectPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "neutral", "AmbientLighting:color", "AmbientLighting" ],
"method": "matchKeyframeColor"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AmbientLighting:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.121569, 0.109804, 0.121569, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "warmGlow"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("AmbientLighting:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0235294, 0.0235294, 0.0235294, 1 ), Color( 0.176471, 0.12549, 0.00784314, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EffectPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "warmGlow", "AmbientLighting:color", "AmbientLighting" ],
"method": "matchKeyframeColor"
} ]
}

[node name="SceneContainer" type="Control"]
margin_right = 650.0
margin_bottom = 450.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Volume" type="TextureButton" parent="CanvasLayer"]
margin_left = 6.0
margin_top = 8.0
margin_right = 39.0
margin_bottom = 41.0
texture_normal = ExtResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeInToMenu = SubResource( 2 )
anims/FadeOut = SubResource( 3 )

[node name="MenuCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="StoryTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Timer to manage the progression of story events.
As currently set, every 20 seconds of walking time, checked every 5 seconds, if no DialogBox is already in play, will "
}

[node name="FlairManager" type="Node2D" parent="."]
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="ExitManager" type="Node2D" parent="."]
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="StoryManager" type="Node2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="PermanenceManager" type="Node2D" parent="."]
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="AmbientMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AmbientLighting" type="CanvasModulate" parent="."]
visible = false
modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
z_index = 1
color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="EffectPlayer" type="AnimationPlayer" parent="."]
anims/anger = SubResource( 7 )
anims/darken = SubResource( 4 )
anims/depression = SubResource( 9 )
anims/flicker = SubResource( 5 )
anims/neutral = SubResource( 13 )
anims/warmGlow = SubResource( 11 )
script = ExtResource( 13 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( -50, -50 )

[connection signal="pressed" from="CanvasLayer/Volume" to="CanvasLayer/Volume" method="onPressed"]
[connection signal="timeout" from="StoryTimer" to="StoryTimer" method="_on_StoryTimer_timeout"]
[connection signal="dramatic" from="StoryManager" to="AmbientLighting" method="whenDramatic"]
